# ominihub_axis

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: API.md  DEPLOY.md  README.md  TESTING.md
migrations/: 001_create_users.sql  002_create_hubs.sql  003_create_coverage_versions.sql  004_create_hub_validations.sql  005_create_roaming_validations.sql  006_add_user_hub_fk.sql  20260321000003_create_drivers.sql  20260321000006_create_blocked_entities.sql  20260321000007_create_admins.sql  20260321000008_create_admin_hub_access.sql  20260321000009_create_hub_status.sql  20260321001001_alter_hubs_billing.sql  20260321001002_create_franchise_payments.sql  20260321001003_create_payment_adjustments.sql  20260321001004_create_hub_status_history.sql  20260321001005_create_franchise_notifications.sql  20260321001006_create_payment_webhook_logs.sql
src/: lib.rs  main.rs  routes.rs
src/config/: settings.rs
src/db/: pool.rs
src/handlers/: auth.rs  coverage.rs  franchise_payments.rs  franchisee.rs  hubs.rs  mod.rs  roaming.rs  webhooks.rs  ws.rs
src/jobs/: payment_checker.rs
src/middleware/: auth.rs
src/models/: admin.rs  blocked_entity.rs  driver.rs  franchise_notification.rs  franchise_payment.rs  hub.rs  hub_status_history.rs  mod.rs  payment_adjustment.rs  roaming.rs  user.rs
src/services/: auth_service.rs  block_service.rs  event_broadcaster.rs  heartbeat_worker.rs  hub_status_service.rs  mod.rs  notification_service.rs  payment_gateway.rs  payment_service.rs
tests/: hub_contains.rs
tests/common/: mod.rs
tests/integration/: mod.rs  (+2 more)
(+5 files in other folders)
