[package]
name = "axis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "0.24"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }
bcrypt = "0.15"
tower = { version = "0.4", features = ["util"] }
